@@ -1,3 +1,12 @@
+2011-09-15  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	automake: remove code duplication in 'handle_tests'
+	* automake.in (handle_tests): Factor out some code dealing with
+	test extensions and rules for generation of `.log' files into ...
+	(handle_per_suffix_test): ... this new subroutine.
+	* tests/parallel-tests-exeext.test: New test.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-09-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix spurious failure on fast machines
